# sdlc-example

./: README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/agents/: __init__.py  analysis_agent.py  base.py  deployment_agent.py  design_agent.py  implementation_agent.py  intake_agent.py  retrospective_agent.py  testing_agent.py
backend/app/integrations/: langfuse_client.py
backend/app/models/: workflow.py
backend/app/services/: agent_manager.py  workflow_orchestrator.py
backend/app/utils/: llm.py
backend/app/workflows/: sdlc_graph.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
frontend/src/: App.tsx  styles.css
