[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlc-agent-platform"
version = "0.1.0"
description = "Multi-agent SDLC orchestration platform built with FastAPI and LangFuse"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langfuse>=2.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30"
]

[tool.setuptools.package-dir]
"" = "app"

[tool.setuptools.packages.find]
where = ["app"]
